2004-09-23  Zoltan Varga  <vargaz@freemail.hu>

	* EventInfo.cs: Fix 2.0 build.

	* MonoEvent.cs (MonoEventInfo): Add 'other_methods' field.

	* EventInfo.cs MonoEvent.cs: Add NET 2.0 GetOtherMethods method.

2004-09-22  Zoltan Varga  <vargaz@freemail.hu>

	* Module.cs: Implement net 2.0 ResolveXXX methods.

	* Module.cs (resolve_token_exception): Fix type of exception thrown.

2004-09-21  Martin Baulig  <martin@ximian.com>

	* Assembly.cs (MonoDebugger_CheckRuntimeVersion): New internal method.

2004-09-20  Zoltan Varga  <vargaz@freemail.hu>

	* Assembly.cs: Implement 2.0 reflection properties.

	* Module.cs: Implement 2.0 reflection properties. Add 'token' field.

2004-09-19  Zoltan Varga  <vargaz@freemail.hu>

	* PortableExecutableKind.cs ImageFileMachine.cs: Make this internal
	under 1.0.

	* MemberInfo.cs ParameterInfo.cs: Add MetadataToken property.

	* Module.cs: Add ModuleHandle property and new icalls.

2004-09-18  Zoltan Varga  <vargaz@freemail.hu>

	* Module.cs: Add net 2.0 Mvid property.

2004-08-30  Sebastien Pouliot  <sebastien@ximian.com>

	* Assembly.cs: Added internal Demand(PermissionSet) for CAS.

2004-08-30  Zoltan Varga  <vargaz@freemail.hu>

	* MethodBase.cs (GetMethodFromHandle): Avoid passing a valuetype to
	icalls.

2004-08-29  Zoltan Varga  <vargaz@freemail.hu>

	* MethodBase.cs (GetMethodFromHandle): Implement.

2004-08-13  Marek Safar  <marek.safar@seznam.cz>

	* Assembly.cs: Made _minimum, _optional, _refuse fields internal.
	To be reusable by AssemblyBuilder.

2004-08-09  Sebastien Pouliot  <sebastien@ximian.com>

	* Assembly.cs: Fixed some exceptions in NET_1_1 and added some 2.0
	properties (required for compiling the new unit tests).
	* PortableExecutableKind.cs: New. Flags for NET_2_0.
	* ImageFileMachine.cs: New. (Rather limited) enum for NET_2_0.

2004-08-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Assembly.cs: Get default evidences when no evidences have been 
	supplied. Added internal methods for CAS.